# python-zunclient

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst  usage.rst
doc/source/cli/: index.rst
doc/source/cli/command-objects/: action.rst  host.rst  image.rst  service.rst
doc/source/cli/man/: zun.rst
doc/source/contributor/: index.rst
doc/source/install/: index.rst
doc/source/user/: index.rst  python-api.rst
playbooks/zunclient-devstack-docker-sql/: run.yaml
releasenotes/notes/: drop-py-2-7-c18f48ee28088c4a.yaml
releasenotes/source/: conf.py  index.rst
tools/: cover.sh  run_functional.sh  zun.bash_completion  zun.zsh_completion
zunclient/: __init__.py  api_versions.py  client.py  exceptions.py  i18n.py  shell.py  version.py
zunclient/common/: base.py  cliutils.py  httpclient.py  template_format.py  template_utils.py  utils.py
zunclient/common/apiclient/: auth.py  base.py  exceptions.py
zunclient/common/websocketclient/: exceptions.py  websocketclient.py
zunclient/experimental/: capsules.py  capsules_shell.py  client.py  shell.py
zunclient/osc/: plugin.py
zunclient/osc/v1/: availability_zones.py  capsules.py  containers.py  hosts.py  images.py  quota_classes.py  quotas.py  registries.py  services.py
zunclient/tests/: test_httpclient.py  test_shell.py  test_utils.py  test_websocketclient.py  test_zunclient.py  utils.py
zunclient/tests/functional/: base.py
zunclient/tests/functional/hooks/: gate_hook.sh  post_test_hook.sh
zunclient/tests/functional/osc/v1/: base.py  test_container.py
zunclient/tests/unit/: base.py  test_api_versions.py  test_client.py  test_python_zunclient.py  test_shell.py  test_websocketclient.py  utils.py
zunclient/tests/unit/common/: test_httpclient.py  test_utils.py
zunclient/tests/unit/osc/: test_plugin.py
zunclient/tests/unit/v1/: shell_test_base.py  test_availability_zones.py  test_availability_zones_shell.py  test_client.py  test_containers.py  test_containers_shell.py  test_images.py  test_images_shell.py  test_quotas.py  test_registries.py  test_services.py  test_services_shell.py  test_versions.py  test_versions_shell.py
zunclient/tests/v1/: shell_test_base.py  test_containers.py  test_containers_shell.py  test_images.py  test_images_shell.py  test_services.py  test_services_shell.py
zunclient/v1/: actions.py  actions_shell.py  availability_zones.py  availability_zones_shell.py  capsules.py  capsules_shell.py  client.py  containers.py  containers_shell.py  hosts.py  hosts_shell.py  images.py  images_shell.py  quota_classes.py  quota_classes_shell.py  quotas.py  quotas_shell.py  registries.py  registries_shell.py  services.py  services_shell.py  shell.py  versions.py  versions_shell.py
