[metadata]
name = python-zunclient
summary = Client Library for Zun
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://wiki.openstack.org/wiki/Zun
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    zunclient

[entry_points]
console_scripts =
    zun = zunclient.shell:main

openstack.cli.extension =
    container = zunclient.osc.plugin

openstack.container.v1 =
   appcontainer_create = zunclient.osc.v1.containers:CreateContainer
   appcontainer_show = zunclient.osc.v1.containers:ShowContainer
   appcontainer_list = zunclient.osc.v1.containers:ListContainer
   appcontainer_delete = zunclient.osc.v1.containers:DeleteContainer

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = zunclient/locale
domain = zunclient

[update_catalog]
domain = zunclient
output_dir = zunclient/locale
input_file = zunclient/locale/zunclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = zunclient/locale/zunclient.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
