[metadata]
name = python-zunclient
summary = Client Library for Zun
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/developer/zun/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    zunclient

[entry_points]
console_scripts =
    zun = zunclient.shell:main

openstack.cli.extension =
    container = zunclient.osc.plugin

openstack.container.v1 =
   appcontainer_create = zunclient.osc.v1.containers:CreateContainer
   appcontainer_show = zunclient.osc.v1.containers:ShowContainer
   appcontainer_list = zunclient.osc.v1.containers:ListContainer
   appcontainer_delete = zunclient.osc.v1.containers:DeleteContainer
   appcontainer_restart = zunclient.osc.v1.containers:RestartContainer
   appcontainer_start = zunclient.osc.v1.containers:StartContainer
   appcontainer_pause = zunclient.osc.v1.containers:PauseContainer
   appcontainer_unpause = zunclient.osc.v1.containers:UnpauseContainer
   appcontainer_exec = zunclient.osc.v1.containers:ExecContainer
   appcontainer_logs = zunclient.osc.v1.containers:LogsContainer
   appcontainer_kill = zunclient.osc.v1.containers:KillContainer
   appcontainer_stop = zunclient.osc.v1.containers:StopContainer
   appcontainer_run = zunclient.osc.v1.containers:RunContainer
   appcontainer_rename = zunclient.osc.v1.containers:RenameContainer
   appcontainer_top = zunclient.osc.v1.containers:TopContainer
   appcontainer_update = zunclient.osc.v1.containers:UpdateContainer
   appcontainer_attach = zunclient.osc.v1.containers:AttachContainer
   appcontainer_cp = zunclient.osc.v1.containers:CopyContainer
   appcontainer_stats = zunclient.osc.v1.containers:StatsContainer
   appcontainer_commit = zunclient.osc.v1.containers:CommitContainer

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = zunclient/locale
domain = zunclient

[update_catalog]
domain = zunclient
output_dir = zunclient/locale
input_file = zunclient/locale/zunclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = zunclient/locale/zunclient.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
