[metadata]
name = python-zunclient
summary = Client Library for Zun
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/python-zunclient/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    zunclient

[entry_points]
console_scripts =
    zun = zunclient.shell:main

openstack.cli.extension =
    container = zunclient.osc.plugin

openstack.container.v1 =
   appcontainer_availability_zone_list = zunclient.osc.v1.availability_zones:ListAvailabilityZone
   appcontainer_service_list = zunclient.osc.v1.services:ListService
   appcontainer_service_delete = zunclient.osc.v1.services:DeleteService
   appcontainer_service_enable = zunclient.osc.v1.services:EnableService
   appcontainer_service_disable = zunclient.osc.v1.services:DisableService
   appcontainer_service_forcedown = zunclient.osc.v1.services:ForceDownService
   appcontainer_create = zunclient.osc.v1.containers:CreateContainer
   appcontainer_show = zunclient.osc.v1.containers:ShowContainer
   appcontainer_list = zunclient.osc.v1.containers:ListContainer
   appcontainer_delete = zunclient.osc.v1.containers:DeleteContainer
   appcontainer_restart = zunclient.osc.v1.containers:RestartContainer
   appcontainer_start = zunclient.osc.v1.containers:StartContainer
   appcontainer_pause = zunclient.osc.v1.containers:PauseContainer
   appcontainer_unpause = zunclient.osc.v1.containers:UnpauseContainer
   appcontainer_exec = zunclient.osc.v1.containers:ExecContainer
   appcontainer_logs = zunclient.osc.v1.containers:LogsContainer
   appcontainer_kill = zunclient.osc.v1.containers:KillContainer
   appcontainer_stop = zunclient.osc.v1.containers:StopContainer
   appcontainer_run = zunclient.osc.v1.containers:RunContainer
   appcontainer_top = zunclient.osc.v1.containers:TopContainer
   appcontainer_set = zunclient.osc.v1.containers:UpdateContainer
   appcontainer_attach = zunclient.osc.v1.containers:AttachContainer
   appcontainer_cp = zunclient.osc.v1.containers:CopyContainer
   appcontainer_stats = zunclient.osc.v1.containers:StatsContainer
   appcontainer_commit = zunclient.osc.v1.containers:CommitContainer
   appcontainer_add_security_group = zunclient.osc.v1.containers:AddSecurityGroup
   appcontainer_image_delete = zunclient.osc.v1.images:DeleteImage
   appcontainer_image_list = zunclient.osc.v1.images:ListImage
   appcontainer_image_pull = zunclient.osc.v1.images:PullImage
   appcontainer_host_list = zunclient.osc.v1.hosts:ListHost
   appcontainer_host_show = zunclient.osc.v1.hosts:ShowHost
   appcontainer_network_detach = zunclient.osc.v1.containers:NetworkDetach
   appcontainer_network_attach = zunclient.osc.v1.containers:NetworkAttach
   appcontainer_network_list = zunclient.osc.v1.containers:NetworkList
   appcontainer_image_search = zunclient.osc.v1.images:SearchImage
   appcontainer_remove_security_group = zunclient.osc.v1.containers:RemoveSecurityGroup
   appcontainer_image_show = zunclient.osc.v1.images:ShowImage
   appcontainer_rebuild = zunclient.osc.v1.containers:RebuildContainer
   appcontainer_action_list = zunclient.osc.v1.containers:ActionList
   appcontainer_action_show = zunclient.osc.v1.containers:ActionShow
   appcontainer_quota_get = zunclient.osc.v1.quotas:GetQuota
   appcontainer_quota_default = zunclient.osc.v1.quotas:GetDefaultQuota
   appcontainer_quota_delete = zunclient.osc.v1.quotas:DeleteQuota
   appcontainer_quota_update = zunclient.osc.v1.quotas:UpdateQuota
   appcontainer_quota_class_update = zunclient.osc.v1.quota_classes:UpdateQuotaClass
   appcontainer_quota_class_get = zunclient.osc.v1.quota_classes:GetQuotaClass

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = zunclient/locale
domain = zunclient

[update_catalog]
domain = zunclient
output_dir = zunclient/locale
input_file = zunclient/locale/zunclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = zunclient/locale/zunclient.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
